--- a/public/plugins/jquery.steps/css/jquery.steps.css
+++ b/public/plugins/jquery.steps/css/jquery.steps.css
@@ -146,6 +146,7 @@
     overflow: hidden;
     position: relative;
     width: auto;
+    overflow: auto;
 
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
